--- a/gyro_interact.html
+++ b/gyro_interact.html
@@ -38,10 +38,26 @@
     </div>
 
     <div id="container">
-        <div class="popup" id="0"><h1>Gift Store:</h1>Great prices all year!</div>
-        <div class="popup" id="1"><h1>Restaurant:</h1>The best in town!</div>
-        <div class="popup" id="2"><h1>Popup 2</h1> bla bla</div>
-        <div class="popup" id="3">test</div>
+        <div class="popup" id="0">
+            <h1>Gift Store:</h1>
+            <video width="150" height="84" id="video0"><source src="video/video0.mp4" type="video/mp4">Your browser does not support video tag</video>
+            <p> Lorem ipsum 0</p>
+        </div>
+        <div class="popup" id="1">
+            <h1>Restaurant:</h1>
+            <video width="150" height="84" id="video1"><source src="video/video1.mp4" type="video/mp4">Your browser does not support video tag</video>
+            <p> Lorem ipsum 1</p>
+        </div>
+        <div class="popup" id="2">
+            <h1>Popup 2</h1>
+            <video width="150" height="84" id="video2"><source src="video/video2.mp4" type="video/mp4">Your browser does not support video tag</video>
+            <p> Lorem ipsum 2</p>
+        </div>
+        <div class="popup" id="3">
+            <h1>Popup 3</h1>
+            <video width="150" height="84" id="video3"><source src="video/video3.mp4" type="video/mp4">Your browser does not support video tag</video>
+            <p> Lorem ipsum 3</p>
+        </div>
     </div>
 
 </body>
