--- a/gyro_interact.html
+++ b/gyro_interact.html
@@ -14,48 +14,25 @@
     <script src="js/libs/stats.min.js"></script>
     <script src="js/libs/TweenMax.min.js"></script>
 
-    
-    <div class="main">
-        <h2>Device Orientation</h2> 
-        <table>
-            <tbody><tr>
-                <td>Event Supported</td>
-                <td id="doEvent">DeviceOrientation:</td>
-            </tr>
-            <tr>
-                <td>Roll [gamma]</td>
-                <td id="doTiltLR">0</td>
-            </tr>
-            <tr>
-                <td>Pitch [beta]</td>
-                <td id="doTiltFB">0</td>
-            </tr>
-            <tr>
-                <td>Yaw [alpha]</td>
-                <td id="doDirection">0</td>
-            </tr>
-        </tbody></table>
-    </div>
-
     <div id="container">
         <div class="popup" id="0">
-            <h1>Gift Store:</h1>
-            <video width="150" height="84" id="video0"><source src="video/video0.mp4" type="video/mp4">Your browser does not support video tag</video>
+            <h1>Zero</h1>
+            <video width="150" height="84" id="video0" preload autoplay><source src="video/video0.mp4" type="video/mp4">Your browser does not support video tag</video>
             <p> Lorem ipsum 0</p>
         </div>
         <div class="popup" id="1">
-            <h1>Restaurant:</h1>
-            <video width="150" height="84" id="video1"><source src="video/video1.mp4" type="video/mp4">Your browser does not support video tag</video>
+            <h1>One</h1>
+            <video width="150" height="84" id="video1" preload autoplay><source src="video/video1.mp4" type="video/mp4">Your browser does not support video tag</video>
             <p> Lorem ipsum 1</p>
         </div>
         <div class="popup" id="2">
-            <h1>Popup 2</h1>
-            <video width="150" height="84" id="video2"><source src="video/video2.mp4" type="video/mp4">Your browser does not support video tag</video>
+            <h1>Two</h1>
+            <video width="150" height="84" id="video2" preload autoplay><source src="video/video2.mp4" type="video/mp4">Your browser does not support video tag</video>
             <p> Lorem ipsum 2</p>
         </div>
         <div class="popup" id="3">
-            <h1>Popup 3</h1>
-            <video width="150" height="84" id="video3"><source src="video/video3.mp4" type="video/mp4">Your browser does not support video tag</video>
+            <h1>Three</h1>
+            <video width="150" height="84" id="video3" preload autoplay><source src="video/video3.mp4" type="video/mp4">Your browser does not support video tag</video>
             <p> Lorem ipsum 3</p>
         </div>
     </div>
